--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
-<script src="/javascripts/socket.io.js"></script>
+<script src="./javascripts/socket.io.js"></script>
 <script>
- var socket = io.connect('http://localhost');
- socket.on('news', function (data) {
-   console.log(data);
-   socket.emit('my other event', { my: 'data' });
- });
+  var socket = io.connect('http://localhost:4000');
+  socket.on('news', function (data) {
+    console.log(data);
+    socket.emit('my other event', { my: 'data' });
+  });
 </script>
 
 
