TODO: break up fnytimes function in controller

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
     console.log(data);
     socket.emit('my other event', { my: 'data' });
   });
+  socket.on('headline', function (data) {
+    console.log(data);
+    socket.emit('my other event', { my: 'data' });
+  });
 </script>
 
 
