--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,12 @@
     console.log(data);
     socket.emit('my other event', { my: 'data' });
   });
+ /* 
   socket.on('headline', function (data) {
-    console.log(data);
+    console.warn(data);
     socket.emit('my other event', { my: 'data' });
   });
+*/
 </script>
 
 
@@ -27,7 +29,7 @@
   <br>
   <p>All headlines from the Times home page, cut up.</p>
 
-<!--
+
 
   <p>More information:</p>
   <p><a href="http://www.writing.upenn.edu/~afilreis/88v/tzara.html">http://www.writing.upenn.edu/~afilreis/88v/tzara.html <i class="em em-scissors"></i></a></p>
@@ -35,7 +37,7 @@
   <p><a href="https://kdubbels.github.io/">https://kdubbels.github.io <i class="em em-milky_way"></i></a></p>
     <h2>Updated once an hour.</h2>
 
--->
+
 
 </div>
 
